# mySolanaAppTest

./: Anchor.toml  createKeyPair.js
app/: .gitignore  package.json
app/src/: App.tsx  contantes.ts
app/src/config/: idl.json
app/src/hooks/: account.ts
app/src/services/: Account.ts  account.ts
programs/mysolanaapp/: Cargo.toml
programs/mysolanaapp/src/: lib.rs
tests/: mysolanaapp.js
