[package]
name = "mysolanaapp"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[programs.localnet]
mysolanaapp = "Cd5pKiQtUusXou6shdYHzKKnpnyYG5Q2jPPd51ESfWCr"

[lib]
crate-type = ["cdylib", "lib"]
name = "mysolanaapp"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.17.0"
